--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -11,6 +11,10 @@ math: true
 
 ## DS（数据结构）
 
+### 时间复杂度
+
+![](/img/7750ecde-42cf-41d4-b421-33ad22b9a430.png)
+
 ### 外部排序
 
 * I/O次数的计算：初始归并段生成的I/O次数+归并时的I/O次数
@@ -25,10 +29,37 @@ math: true
 * 单链表中删除一个节点有两种方法
   * 1、将该点直接删除，让该点的上一个节点直接指向该点的下一个节点
   * 2、将该点变成该点的下一个点
+  
+* 静态链表删除或插入不需要移动元素
+
+* 数组一旦确定，数据元素的容量和位置关系就是固定的，因此不能进行插入和删除等操作
+
+* 稀疏矩阵压缩存储后，不能直接根据元素所在数组中的位置在内存中定址，也就意味着失去了随机存取的功能
+
+* 广义表：
+
+  ![](/img/21623.jpg)
+
+  ![](/img/221639.jpg)
+
+  ![](/img/221651.jpg)
+
+### 串
+
+#### kmp算法小总结
+
+* 
 
 ## CO（计组）
 
+### 数据的表示和运算
+
+* 原码一位乘共进行n次加法和n次逻辑右移
+  * 补码booth乘法共进行n+1次加法和n次算术右移
+
 ### 指令系统
+
+![](/img/15325.jpg)
 
 ### 中央处理器
 
@@ -131,6 +162,30 @@ math: true
 
 ![](/img/md2card-1750735950162-1(1).png)
 
+* 影响系统缺页率的要素
+
+  * 页面置换算法
+
+  * 工作集的大小
+
+    * 工作集的大小决定了分配给进程的物理块数，分配给进程的物理块数越多，缺页率就越低
+
+  * 进程的数量
+
+    * 进程的数量越多，对内存资源的竞争越激烈，每个进程被分配的物理块数越少，缺页率也就越高
+
+  * 页缓冲队列的长度
+
+    * 页缓冲队列
+
+    ![](/img/220631.jpg)
+
+    ![](/img/220700.jpg)
+
+  * 程序的编制方法
+
+    * 编写程序的局部化程度越高，执行时的缺页率就越低，若存储采用的是按行存储，则访问时就要尽量采用相同的访问方式，避免按列访问造成缺页率过高的现象
+
 #### 虚拟存储管理
 
 * 页式存储管理方式的虚拟地址空间维度是一维的
@@ -150,7 +205,15 @@ math: true
 
 ![](/img/221511.jpg)
 
+### 文件管理
+
+* inode不包含文件名，文件名存储在目录文件的目录项中，每个目录文件将文件名与inode号关联
+
+![](/img/23115.jpg)
+
 ## CN（计网）
 
+### 数据链路层
 
+* 负载均衡：允许多路并行转发数据，最大吞吐量为多路带宽之和
 
