--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -999,67 +999,77 @@ math: true
 
   ![](/img/221511.jpg)
 
-## 6.28
+## 6.28 时间复杂度和数据的表示和内存管理
 
-![](F:\try\home\themes\fluid\source\img\88860f45-c5ef-488a-beeb-0feb852fad80.png)
+![](/img/88860f45-c5ef-488a-beeb-0feb852fad80.png)
 
-![](F:\try\home\themes\fluid\source\img\bb38ac12-d828-47e6-b727-5527f6af7348.png)
-
-错题：
-
-* 
-
-## 6.29
-
-![](F:\try\home\themes\fluid\source\img\639a5495-dcf1-4f32-a606-00a453b804b7.png)
-
-![](F:\try\home\themes\fluid\source\img\a12926f2-e789-4b8b-aec4-33c11ea0bcc1.png)
+![](/img/bb38ac12-d828-47e6-b727-5527f6af7348.png)
 
 错题：
 
-* 
+* 1
 
-## 6.30
+  * 运用递归树
 
-![](F:\try\home\themes\fluid\source\img\49c6866f-eadb-4d06-acf9-283d4c394951.png)
+  ![](/img/7750ecde-42cf-41d4-b421-33ad22b9a430.png)
 
-![](F:\try\home\themes\fluid\source\img\bcad4cfc-cb3d-427a-ba8e-d1e7da2018e6.png)
+## 6.29 链表和数据的运算和文件管理
+
+![](/img/639a5495-dcf1-4f32-a606-00a453b804b7.png)
+
+![](/img/a12926f2-e789-4b8b-aec4-33c11ea0bcc1.png)
 
 错题：
 
-* 
+* 3
+
+  * inode不包含文件名，文件名存储在目录文件的目录项中，每个目录文件将文件名与inode号关联
+
+  ![](/img/23115.jpg)
+
+## 6.30 链表和浮点数的表示和文件管理
+
+![](/img/49c6866f-eadb-4d06-acf9-283d4c394951.png)
+
+![](/img/bcad4cfc-cb3d-427a-ba8e-d1e7da2018e6.png)
+
+错题：
+
+* 1
+* 2
 
 ## 7.1
 
-![](F:\try\home\themes\fluid\source\img\748286cd-e3bf-4033-8f44-93b1d2599666.png)
+![](/img/748286cd-e3bf-4033-8f44-93b1d2599666.png)
 
-![](F:\try\home\themes\fluid\source\img\7857def8-17ee-457f-8ca9-42f54876260d.png)
+![](/img/7857def8-17ee-457f-8ca9-42f54876260d.png)
 
 错题：
 
-* 
+* 无
 
 ## 7.2
 
-![](F:\try\home\themes\fluid\source\img\5d3b386e-23a1-4c95-ac74-4db17cc7952b.png)
+![](/img/5d3b386e-23a1-4c95-ac74-4db17cc7952b.png)
 
-![](F:\try\home\themes\fluid\source\img\ff975d42-9f72-4c49-bba2-63f172ccdee2.png)
-
-错题：
-
-* 
-
-## 7.3
-
-![](F:\try\home\themes\fluid\source\img\f4ba7aa6-b252-4d15-b672-1ae3090f5928.png)
-
-![](F:\try\home\themes\fluid\source\img\046aa9a5-014d-4f98-9ab9-74f9424cf3e3.png)
+![](/img/ff975d42-9f72-4c49-bba2-63f172ccdee2.png)
 
 错题：
 
-* 
+* 4
+  * 负载均衡：允许多路并行转发数据，最大吞吐量为多路带宽之和
 
-## 7.4
+## 7.3 线性表和计算机系统概述和I/O管理和计算机网络体系结构
+
+![](/img/f4ba7aa6-b252-4d15-b672-1ae3090f5928.png)
+
+![](/img/046aa9a5-014d-4f98-9ab9-74f9424cf3e3.png)
+
+错题：
+
+* 无
+
+## 7.4 kmp算法和数据的表示和进程和线程和计算机网络体系结构
 
 ![](F:\try\home\themes\fluid\source\img\f93f582a-03c6-47fd-a314-c840f5814afd.png)
 
