--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -1038,7 +1038,7 @@ math: true
 * 1
 * 2
 
-## 7.1
+## 7.1 图和指令系统和文件管理和计算机网络体系结构
 
 ![](/img/748286cd-e3bf-4033-8f44-93b1d2599666.png)
 
@@ -1048,7 +1048,7 @@ math: true
 
 * 无
 
-## 7.2
+## 7.2 图的基本概念和I/O方式和死锁和计算机网络的性能指标
 
 ![](/img/5d3b386e-23a1-4c95-ac74-4db17cc7952b.png)
 
@@ -1071,41 +1071,152 @@ math: true
 
 ## 7.4 kmp算法和数据的表示和进程和线程和计算机网络体系结构
 
-![](F:\try\home\themes\fluid\source\img\f93f582a-03c6-47fd-a314-c840f5814afd.png)
+![](/img/f93f582a-03c6-47fd-a314-c840f5814afd.png)
 
-![](F:\try\home\themes\fluid\source\img\b58b6391-4e0b-4267-a6fc-4c15f6f30fb9.png)
-
-错题：
-
-* 
-
-## 7.5
-
-![](F:\try\home\themes\fluid\source\img\f250f08d-5379-4464-877a-38fe47c9c512.png)
-
-![](F:\try\home\themes\fluid\source\img\17d9245c-7f19-42a5-aa82-126fdcacd4ce.png)
+![](/img/b58b6391-4e0b-4267-a6fc-4c15f6f30fb9.png)
 
 错题：
 
-* 
+* 1
+  * 注意回溯
+* 3
+  * 资源分配图中不存在环路，则系统状态图中不存在环路，即无死锁
 
-## 7.6 时间复杂度、数据通路、内存分配、TCP/IP
+## 7.5 数据结构的基本概念和中央处理器和死锁和计算机网络体系结构
 
-![](F:\try\home\themes\fluid\source\img\6fd34e7f-8111-41f9-9161-a77421a4621b.png)
+![](/img/f250f08d-5379-4464-877a-38fe47c9c512.png)
 
-![](F:\try\home\themes\fluid\source\img\eeb6f82d-09c2-4711-afac-57265b7ac29e.png)
-
-错题：
-
-* 
-
-## 7.7 链表、微程序控制器、文件管理、OSI模型
-
-![](F:\try\home\themes\fluid\source\img\4f27754c-6d8b-4c0c-80c0-e280d5cbce5b.png)
-
-![](F:\try\home\themes\fluid\source\img\2199b84f-e574-4cfd-9a7d-d148d4617d07.png)
+![](/img/17d9245c-7f19-42a5-aa82-126fdcacd4ce.png)
 
 错题：
 
-* 
+* 4
+  * 同步（或时序）规定了事件发生的顺序
 
+## 7.6 时间复杂度、CPU的基本结构、内存管理、TCP/IP
+
+![](/img/6fd34e7f-8111-41f9-9161-a77421a4621b.png)
+
+![](/img/eeb6f82d-09c2-4711-afac-57265b7ac29e.png)
+
+错题：
+
+* 无
+
+## 7.7 静态链表、微程序控制器、文件管理、OSI模型
+
+![](/img/4f27754c-6d8b-4c0c-80c0-e280d5cbce5b.png)
+
+![](/img/2199b84f-e574-4cfd-9a7d-d148d4617d07.png)
+
+错题：
+
+* 1
+* 3
+  * FAT在文件系统挂载的时候就被全部或大部分读入内存，并常驻内存当中，而不是打开单个文件的时候才去读入
+* 4
+  * 传输媒体（线）不属于网络体系结构
+  * 网络层参与拥塞控制
+
+## 7.8 线性表和I/O查询方式和内存地址转换计算和OSI/TCP模型的区别
+
+![](/img/a95e6801-32fb-4b53-9508-f6d865e9aba2.png)
+
+![](/img/a5a5e8ec-a36a-4a50-b82a-9442d675e290.png)
+
+错题：
+
+* 无
+
+## 7.9 栈和I/O方式和文件存储空间管理和TCP/IP模型
+
+![](/img/084c60e1-8a0a-4b00-b313-2740ee10f13a.png)
+
+![](/img/8e957a93-a6b2-444c-abfb-e9968fa76878.png)
+
+错题：
+
+* 3
+  * 空闲链表法分为空闲盘块链和空闲盘区链，空闲盘区链可以把连续的空闲盘块合并成一个区，支持合并
+
+## 7.10 冒泡排序和计算机软件和页面置换算法和通信基础
+
+![](/img/a1dd11ed-caab-4021-8032-dabebc4acff3.png)
+
+![](/img/ffdde5c4-0633-4c99-8787-0a3116062244.png)
+
+错题：
+
+* 无
+
+## 7.11 快速排序算法和RAM和信号量和通信基础
+
+![](/img/8391c27d-5de1-4be4-a515-309d0c04d1ab.png)
+
+![](/img/41a21dd3-11cc-4925-b73a-622e7abaf9f7.png)
+
+错题：
+
+* 无
+
+## 7.12 队列和补码和目录和通信基础
+
+![](/img/87cd7acb-072b-4c72-9c42-999205f1f6ce.png)
+
+![](/img/1be0b500-b25f-4c5e-8f18-a2773f19caa7.png)
+
+错题：
+
+* 2
+  * **补码的本质是取模**，对于补码表示的定点小数，模数是2，对于补码表示的定点小数，模数是2^n+1
+* 3
+  * 在引入索引节点（inode）的文件系统中，目录项通常包含文件名与该文件名对应的索引节点号。目录本身是一个包含这些目录项的文件。索引节点是存储文件元数据（如文件大小、权限、物理位置等）的数据结构，他们通常集中存放在磁盘的特定区域（索引节点区）。因此，目录是文件名到索引节点号的映射集合，而不是索引节点本身的有序集合。
+* 4
+  * 信道带宽=信道频率范围上限-信道频率范围下限
+
+## 7.13 快速排序和CPU和内存映射文件和通信基础
+
+![](/img/a97a058e-ccca-4427-837f-574ddc5d690d.png)
+
+![](/img/6e46580c-07e7-4759-b735-bf7426fe0152.png)
+
+错题：
+
+* 1
+  * 以第一个关键字
+* 2
+  * 硬布线控制器又名组合逻辑控制器
+
+## 7.14 单链表和主存储器和I/O和CSMA/CA
+
+![](/img/73e5ec4b-82a4-4460-be86-b23c4d13c7e9.png)
+
+![](/img/ac20f96a-46d6-4d9f-82c0-9995f35cfee2.png)
+
+错题：
+
+* 4
+
+![](/img/b4nw4g.png)
+
+![](/img/32311.jpg)
+
+![](/img/32244.jpg)
+
+## 7.15 栈和指令周期和文件系统布局和数据链路层
+
+![](/img/90413852-e97a-48f4-9fee-48debcf5fb6d.png)
+
+![](/img/4d658007-85e3-40f2-812c-857e014a5484.png)
+
+错题：
+
+* 2
+
+  * 时钟上升沿瞬间捕获数据，指的是捕获存储器旧值的数据
+
+  ![](/img/235225.jpg)
+
+* 3
+
+  * 超级块有备份
