--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -24,7 +24,11 @@ math: true
 * 败者树的空间复杂度是O(n)，时间复杂度是O(nlogn)
 * 败者树为k路归并段内部排序所使用的，用于提高内部排序效率，与I/O次数无关
 
+![](/img/3125237.jpg)
+
 ### 链表
+
+* 从长度为n的顺序表中删除任一各元素，平均时间复杂度是O(n)
 
 #### 单链表
 
@@ -109,27 +113,149 @@ int main(){
   * 先求next数组
   * nextval数组j=1的位置无脑写0，然后后面的进行回溯，如果回溯到不一样的就保持不变，一样的就继续回溯
 
+### 树
+
+#### 根据遍历序列确定二叉树的形态
+
+![](/img/24507.jpg)
+
+### 图
+
+* 只有在无向图中，DFS的调用次数=连通分量的个数
+  * 有向图中因为强连通分量要求互相之间都有去往边，而DFS只保证有从一个顶点向另一个顶点的边，不保证有反向的边
+
+#### 图的顶点和边的关系
+
+![](/img/25140.jpg)
+
+### 查找
+
+#### 平衡二叉树(AVL)
+
+* 平衡二叉树的删除
+  * 删除的是叶子节点：直接删除
+  * 删除的是只有左子树或者右子树的节点：删除后用子树替代原节点
+  * 删除的是有两个孩子的节点：用直接前驱（左子树最右下）或者直接后继（右子树最左下）来替代原节点，然后进行调整
+* 平衡二叉树的结点数计算
+
+![](/img/30420.jpg)
+
+#### B树
+
+* B树的删除
+  * 叶子节点：直接删除
+    * 符合规则无需改动
+    * 不满足最低叶子节点：
+      * 兄弟够借借兄弟
+      * 兄弟不够借，合并兄弟节点和自己以及夹在中间的双亲结点
+  * 非叶子节点：删除后用直接前驱或者直接后继替代，相当于在叶子节点删除直接前驱或者直接后继
+
+![](/img/230953.jpg)
+
+![](/img/31007.jpg)
+
+### 排序
+
+* 快速排序的枢轴值将序列划分的越平均排序速度越快
+
 ## CO（计组）
+
+### 计算机系统概述
+
+#### 冯诺依曼计算机的特点
+
+![](/img/31517.jpg)
+
+![](/img/231538.jpg)
+
+#### 计算机分层系统
+
+![](/img/231635.jpg)
+
+![](/img/31726.jpg)
+
+#### 计算机性能指标
+
+* MIPS=（主频/CPI）/10^6
+* 时间=CPI*指令总数/主频
 
 ### 数据的表示和运算
 
 * 原码一位乘共进行n次加法和n次逻辑右移
   * 补码booth乘法共进行n+1次加法和n次算术右移
 * **补码的本质是取模**，对于补码表示的定点小数，模数是2，对于补码表示的定点小数，模数是2^n+1
+* 两个短相加变长，会先对两短进行扩展，扩展的时候按照短自己的类型进行扩展（短的是无符号数就0扩展，是有符号数就符号扩展）。
+
+![](/img/214328.jpg)
+
+#### 浮点数
+
+* 浮点数的舍入
+
+![](/img/32644.jpg)
+
+### 存储系统
+
+#### 主存储器
+
+* 行列地址线复用的情况下，由于DRAM按行刷新，因此行地址位数要小于等于列位地址数，而地址线条数=max（列地址位数，行地址位数）
+* **地址线和译码器输出的选择线的关系：n条地址线，译码输出的选择线是2^n条**
+* DRAM按行刷新，刷新计数器和行地址一样，送往行译码器再进行行选，所以**刷新计数器即地址线根数=10bit**
+* **行缓冲为一行的数据大小=列数*数据位数**
+
+### Cache
+
+* cache比较器个数
+
+![](/img/215517.jpg)
+
+### 虚拟存储器
+
+* 段式的比较先后：
+
+  * 越界与否→缺失与否→越权与否
+
+  ![](/img/20305.jpg)
 
 ### 指令系统
 
 ![](/img/15325.jpg)
 
+* 调用指令第一条指令比须显式给出转移的目标地址，否则无法调用子程序
+* **一条指令的处理时间为：取指令时间+执行指令时间+中断周期时间（关中断、保存断点、中断服务程序入口地址送PC），中断周期时间不包括中断服务程序的执行时间**
+
+* 扩展指令码
+  * 扩展指令码上层是多地址指令，下层是少地址指令，少地址指令
+  * 前缀不能相同
+
+![](/img/010539.jpg)
+
+#### 寻址方式
+
+* 遇到基址寻址计算操作数地址的时候，都可以将基址寄存器的内容和形式地址进行符号扩展以后的结果直接相加
+
 ### 中央处理器
 
 * 所有信号在一个时钟周期内从状态单元1经组合逻辑到达状态单元2，信号到达状态单元2所需的时间决定了时钟周期的长度
   * **时钟周期以相邻状态单元间组合逻辑电路的最大延迟为基准确定**
+* 若单周期处理器中所有指令的指令周期为一个时钟周期，则可以采用多总线结构的数据通路
 
 #### 微程序控制器
 
 * 微程序控制器中，执行指令微程序的首条微指令地址是**指令操作码**译码得到的
 * 硬布线控制器又名组合逻辑控制器
+* 取指微程序是每条机器指令公共的微程序，入口地址通常固定（μPC初始置0，即CM中的首条就是取指微程序的首地址，然后执行取指微程序进行取指）
+* **取指微程序和机器指令微程序的关系和区别**
+
+![](/img/4932414346.jpg)
+
+![](/img/225011.jpg)
+
+![](/img/25026.jpg)
+
+![](/img/25043.jpg)
+
+![](/img/225053.jpg)
 
 #### 时钟信号
 
@@ -189,6 +315,8 @@ int main(){
   * 中断向量表
     * 记录了**中断编号和中断向量的对应关系**
 
+
+
 ## OS（操作系统）
 
 ### 操作系统概述
@@ -236,13 +364,22 @@ int main(){
 
   ![](/img/15013.jpg)
 
-* DMA进行数据传送之前，CPU先执行一段初始化程序，完成对DMA控制器中各参数寄存器的初始值的设定，因此**通过软件完成对DMA控制器中各参数寄存器的初始值的设定**
+#### I/O方式
 
+##### DMA方式
+
+* DMA进行数据传送之前，CPU先执行一段初始化程序，完成对DMA控制器中各参数寄存器的初始值的设定，因此**通过软件完成对DMA控制器中各参数寄存器的初始值的设定**
 * 发生缺页中断时，若在缺页处理程序中将缺页调入内存采用DMA方式，则需要把磁盘物理地址写入DMA控制器中的设备地址寄存器DAR，将交换数据的主存起始位置（该页面的页基址）写入DMA接口中的主存地址寄存器
+* 对于外中断的请求响应发生在每个指令周期结束后，对DMA请求的响应发生在每个总线事务结束之后
+* DMA控制器是一个独立的硬件，有自己独立的寄存器控制数据传输，**在传输数据时不需要CPU的参与，也不需要修改CPU的现场信息，无须保护现场**，而中断方式需要CPU运行中断服务程序进行数据传输，因此需要保存CPU现场信息
+
+##### 程序查询方式
 
 * 程序直接控制I/O方式包含无条件传送和条件传送，无条件传送较为简单，无状态等交互信息，只需定时查询即可，适合于巡回检测采样系统或过程控制系统，以及非随机启动的字符型设备。
 
   * 条件传送方式下，接口中含有“就绪”“完成”等状态，可继续分为独占查询和定时查询
+
+
 
 ### 内存管理
 
