--- a/source/_posts/时间复杂度特集.md
+++ b/source/_posts/时间复杂度特集.md
@@ -58,3 +58,24 @@ index_img: /img/1920x1080 (28).jpg
 ![](/img/84944.jpg)
 
 ![](/img/185132.jpg)
+
+## 个人总结——时间复杂度计算
+
+### 内外嵌套变量关系循环
+
+* 内外嵌套，写级数
+  * 最内层为单次的循环个数，求和符号上方写范围，下方写取值集合
+
+![](/img/21848.jpg)
+
+![](/img/221857.jpg)
+
+### 函数调用类
+
+* 递归树
+
+![](/img/222553.jpg)
+
+* 主定理
+
+![](/img/222528.jpg)
