--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -1220,3 +1220,71 @@ math: true
 * 3
 
   * 超级块有备份
+
+## 7.16
+
+![]()
+
+![]()
+
+错题：
+
+* 
+
+## 五月考试错题
+
+### 考点：二叉树的树型个数
+
+![](/img/222553.jpg)
+
+### 考点：哈夫曼树的高度
+
+![](/img/224933.jpg)
+
+### 考点：图的概念和图的遍历——DFS和强连通分量
+
+![](/img/25342.jpg)
+
+### 考点：AVL平衡二叉树的操作
+
+![](/img/230221.jpg)
+
+![](/img/0233.jpg)
+
+### 考点：快速排序的比较次数
+
+![](/img/231135.jpg)
+
+### 考点：数据计算——标志位的判断
+
+![](/img/32005.jpg)
+
+### 考点：浮点数的运算
+
+![](/img/32238.jpg)
+
+![](/img/232249.jpg)
+
+### 考点：扩展操作码指令格式
+
+![](/img/22722.jpg)
+
+### 考点：寻址方式——基址寻址的地址计算
+
+![](/img/222618.jpg)
+
+### 考点：微程序控制器
+
+![](/img/rwvwevr.jpg)
+
+![](/img/24429.jpg)
+
+### 考点：I/O控制方式
+
+![](/img/225507.jpg)
+
+![](/img/225634.jpg)
+
+### 考点：I/O端口及其编址
+
+![](/img/30359.jpg)
