--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -1309,7 +1309,7 @@ index_img: /img/1920x1080 (37).jpg
     * FR（即标志寄存器，有的系统中称为PSW）
       
     * 控制信号：允许读、允许写
-      
+    
   * ⑨暂存寄存器
     
   * 通常会在单总线结构中和ALU配合使用
@@ -1529,6 +1529,10 @@ index_img: /img/1920x1080 (37).jpg
 
 * **普通数据冒险采用旁路转发技术不需要阻塞，而load-use需要阻塞一个时钟周期的根本原因是所需数据产生的阶段不同，使用ALU计算获得结果（所需数据）的在EX阶段可以产生所需数据，而load指令在M阶段从内存中获取所需数据**
   * load指令中的ID和EX是在获取所需数据的内存地址，M访存获得所需数据
+
+![](/img/24104.jpg)
+
+![](/img/224117.jpg)
 
 ### 控制冒险的分析和处理
 
