--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -113,6 +113,10 @@ int main(){
   * 先求next数组
   * nextval数组j=1的位置无脑写0，然后后面的进行回溯，如果回溯到不一样的就保持不变，一样的就继续回溯
 
+### 栈
+
+* 上溢是指存储器满，还往里写，下溢是指存储器空，还往外读。
+
 ### 树
 
 #### 根据遍历序列确定二叉树的形态
@@ -157,6 +161,7 @@ int main(){
 ### 排序
 
 * 快速排序的枢轴值将序列划分的越平均排序速度越快
+* 快速排序越有序，递归深度越深
 
 ## CO（计组）
 
@@ -178,6 +183,13 @@ int main(){
 
 * MIPS=（主频/CPI）/10^6
 * 时间=CPI*指令总数/主频
+* 影响平均CPI的因素
+  * 微体系结构决定硬件执行指令的效率
+    * 如流水线、超标量、分支预测等
+  * 指令调度策略用于优化指令执行顺序，减少数据依赖或者控制依赖导致的冒险
+    * 如编译器静态调度或硬件动态调度
+  * 指令系统结构直接决定指令的复杂度和执行效率
+    * 如RISC或CISC
 
 ### 数据的表示和运算
 
@@ -199,9 +211,23 @@ int main(){
 #### 主存储器
 
 * 行列地址线复用的情况下，由于DRAM按行刷新，因此行地址位数要小于等于列位地址数，而地址线条数=max（列地址位数，行地址位数）
+
 * **地址线和译码器输出的选择线的关系：n条地址线，译码输出的选择线是2^n条**
+
 * DRAM按行刷新，刷新计数器和行地址一样，送往行译码器再进行行选，所以**刷新计数器即地址线根数=10bit**
+
 * **行缓冲为一行的数据大小=列数*数据位数**
+
+* **多路选择器是一种能够从多个输入信号中选择一个输出的信号转换设备。译码器是一种将二进制编码转换为一组特定输出信号的设备。在寄存器堆中，译码器常常用于地址译码，从而控制对特定寄存器的访问。**
+
+  ![](/img/91810.jpg)
+
+  * **执行寄存器写相关指令时（将结果保存在寄存器中），指令中的寄存器编号被送到一个地址译码器进行译码，选中某个寄存器进行写入，读出时（从寄存器中获得计算数据）寄存器编号作为一个控制信号来控制一个多路选择器，选择相应的寄存器读出。**
+  * 读口（组合逻辑操作）：无需时钟控制，busA和busB分别由RA和RB给出地址。地址RA或RB有效后，经一个“取数时间（AccessTime）”，busA和busB有效
+  * 写口（时序逻辑操作）：需要时钟控制。写使能为1的情况下，时钟边沿到来时，busW传来的值开始被写入RW指定的寄存器中。
+    * 写是需要改变寄存器的值的，需要等到数据的信号稳定后写入，防止出错。而读只需要和寄存器里的值相等就行
+
+* SRAM不地址复用,DRAM地址复用
 
 ### Cache
 
@@ -216,6 +242,8 @@ int main(){
   * 越界与否→缺失与否→越权与否
 
   ![](/img/20305.jpg)
+  
+* **逻辑地址空间的大小受限于CPU的寻址能力（如32位CPU理论上可以寻址4GB，64位CPU则大得多）**，而这些逻辑地址空间中的内容，一部分在物理内存中，大部分则存放在外存（通常是磁盘的交换区或对换区）上。因此，虚拟存储的总容量可以理解为物理内存和可用外存空间之和，但实际上限更多地由CPU寻址范围和外存大小决定
 
 ### 指令系统
 
@@ -272,6 +300,11 @@ int main(){
 ![](/img/4d658007-85e3-40f2-812c-857e014a5484(1).png)
 
 ### 指令流水线
+
+* 虽然增加流水线级数可能缩短每级延迟，但“必然”提高主频的说法过于绝对。实际中，流水线级数增加会引入额外的寄存器延迟（如建立时间、保持时间），且若各阶段延迟不均衡，最慢阶段仍会限制主频。此外，过深的流水线可能导致控制复杂度上升，反而影响性能。因此，当段数达到一定数量时，流水线技术增加不一定会提高主频了。
+* 流水线的时钟周期必须覆盖最慢阶段的延迟（包括组合逻辑延迟和流水线寄存器延迟），否则会导致数据无法正确传递。因此，CPU的最高频率由流水线中最关键路径（即延迟最大的阶段）决定。
+* 流水线技术的核心优势在于提高吞吐率（单位时间内完成的指令数），而非减少单条指令的执行时间。由于流水线寄存器延迟的存在，单条指令的总执行时间可能反而略有增加（如从单周期变为多周期）。虽然主频提高可能缩短时钟周期，但单条指令仍需经历多个阶段，其总执行时间并未减少
+* 流水线级数的核心思想正是通过指令级并行（ILP）实现多条指令的不同阶段同时执行。
 
 #### 数据冒险
 
@@ -363,6 +396,8 @@ int main(){
   * **初始化外设**的代码在**驱动程序**中
 
   ![](/img/15013.jpg)
+  
+* 由于CPU处理时间比I/O设备短得多，因此设立缓冲区机制，用于缓和CPU与I/O设备的速度差异，提高CPU与I/O设备之间的并行性；当I/O花费的时间比CPU处理时间短得多，则缓冲区的存在就毫无意义了
 
 #### I/O方式
 
@@ -379,7 +414,9 @@ int main(){
 
   * 条件传送方式下，接口中含有“就绪”“完成”等状态，可继续分为独占查询和定时查询
 
+#### I/O软件层次结构
 
+* ![](/img/223932432.jpg)
 
 ### 内存管理
 
@@ -448,6 +485,7 @@ int main(){
 * 空闲链表法分为空闲盘块链和空闲盘区链，空闲盘区链可以把连续的空闲盘块合并成一个区，支持合并
 * 在引入索引节点（inode）的文件系统中，目录项通常包含文件名与该文件名对应的索引节点号。目录本身是一个包含这些目录项的文件。索引节点是存储文件元数据（如文件大小、权限、物理位置等）的数据结构，他们通常集中存放在磁盘的特定区域（索引节点区）。因此，目录是文件名到索引节点号的映射集合，而不是索引节点本身的有序集合。
 * 超级块通常在磁盘上有多个副本（备份）。主超级块通常位于文件系统的固定位置，而备份超级块则分布在文件系统的其他位置，如果主超级块损坏，系统可以尝试从备份中恢复。
+* ![](/img/203944.jpg)
 
 ## CN（计网）
 
@@ -457,10 +495,22 @@ int main(){
 * 网络层参与拥塞控制
 * 无确认无连接服务适用于实时性要求高的场景
 
+### 物理层
+
+* 电路交换：
+  * 一旦专用电路建立，路径上的任何障碍都会导致整个连接中断
+* 数据报分组交换
+  * 每个分组独立路由，某个后继路由器故障后，发往该路由器的分组将失败，除非路由协议（如OSPF，RIP）能够检测到故障并找到一条不经过该路由器的新路径到达目的服务器，否则后续分组将无法到达
+* 报文交换
+  * 如果报文已经完整到达某路由器，但是下一跳路由器故障，某路由器无法将报文转发出去。该报文可能会在某路由器的存储中因超时而丢弃，或者如果系统有动态路由能力且存在备用路径，可能会尝试重路由（但这超出了基本报文交换的范畴，更接近高级网络功能）。基本情况下可以认为报文受阻于某路由
+
 ### 数据链路层
 
 * 负载均衡：允许多路并行转发数据，最大吞吐量为多路带宽之和
 * 信道带宽=信道频率范围上限-信道频率范围下限
+* 时延带宽积=传播时延*信号带宽
+* 交换机（或网桥）对终端设备透明，**不改变帧的MAC地址**。路由器在将IP数据报从一个网络转发到另一个网络时，需要重新封装数据链路层帧头，**此时源MAC地址是路由器出接口的MAC，目的MAC地址是下一跳或最终目标主机的MAC**
+* 传输数据量只用在意时间内发送方能发送多少，不需要在意对方收没收到
 
 #### CSMA/CA
 
@@ -469,3 +519,8 @@ int main(){
 ![](/img/32311.jpg)
 
 ![](/img/32244.jpg)
+
+### 网络层
+
+* 路由器在查找路由表时使用最长前缀匹配原则来确定最佳路由。交换机在查找MAC地址表时，是进行**精准匹配**，级查找与帧目的MAC地址完全相同的表项。如果找不到，则泛洪（对未知单播）。没有“最长匹配”的概念用于交换机的MAC地址表查找。
+
