--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -2836,6 +2836,8 @@ math: true
 
 ![](/img/184210.jpg)
 
+* 由于CPU处理时间比I/O设备短得多，因此设立缓冲区机制，用于缓和CPU与I/O设备的速度差异，提高CPU与I/O设备之间的并行性；当I/O花费的时间比CPU处理时间短得多，则缓冲区的存在就毫无意义了
+
 ##### 单缓冲
 
 ![](/img/184359.jpg)
