--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -1221,15 +1221,86 @@ math: true
 
   * 超级块有备份
 
-## 7.16
+## 7.16 栈和电路和虚拟存储器和通信基础
 
-![]()
+![](/img/Cache_-7737630fa4c17db2.jpg)
 
-![]()
+![](/img/Cache_4268964b350620d7.jpg)
+
+错题：
+
+* 2
+
+  * **多路选择器是一种能够从多个输入信号中选择一个输出的信号转换设备。译码器是一种将二进制编码转换为一组特定输出信号的设备。在寄存器堆中，译码器常常用于地址译码，从而控制对特定寄存器的访问。**
+
+    ![](/img/91810.jpg)
+
+    * **执行寄存器写相关指令时（将结果保存在寄存器中），指令中的寄存器编号被送到一个地址译码器进行译码，选中某个寄存器进行写入，读出时（从寄存器中获得计算数据）寄存器编号作为一个控制信号来控制一个多路选择器，选择相应的寄存器读出。**
+    * 读口（组合逻辑操作）：无需时钟控制，busA和busB分别由RA和RB给出地址。地址RA或RB有效后，经一个“取数时间（AccessTime）”，busA和busB有效
+    * 写口（时序逻辑操作）：需要时钟控制。写使能为1的情况下，时钟边沿到来时，busW传来的值开始被写入RW指定的寄存器中。
+
+## 7.17
+
+![ ](/img/0452985b-7810-4a82-9da8-9d858f536181.png)
+
+![](/img/d5c7a32d-751e-4dfc-9b63-c09cdfaeb0c0.png)
+
+错题：
+
+* 1
+* 3
+
+## 7.18
+
+![](/img/f44b8c23-b5d0-45e3-b383-49c9fc8ab1de.png)
+
+![](/img/09c062a9-9021-4cae-adc0-5d6d8788cfa0.png)
+
+错题：
+
+* 无
+
+## 7.19
+
+![](/img/0bfa15ee-5a64-4d9a-9094-b5ac2170d949.png)
+
+![](/img/fb0e8cf6-a94a-4ca2-b6c4-b5cbc8ddf48d.png)
 
 错题：
 
 * 
+
+## 7.20
+
+![](/img/f316361d-be20-47ca-86b2-c6d6e2baca3f.png)
+
+![](/img/90a23c6a-2330-44dd-baff-19ced0514b30.png)
+
+错题：
+
+* 无
+
+## 7.21
+
+![](/img/d22f8ed0-9b18-498f-9fd2-7bdf19b340e1.png)
+
+![](/img/41ceb5d0-fbf7-44c2-bffb-d6384d824e9e.png)
+
+错题：
+
+* 3
+* 4
+  * 传输数据量只用在意时间内发送方能发送多少，不需要在意对方收没收到
+
+## 7.22
+
+![](/img/295ec504-9e40-4c5e-8ac6-6dd0d0a66ad5.png)
+
+![](/img/Cache_-a3f3dca220e8f.png)
+
+错题：
+
+* 无
 
 ## 五月考试错题
 
