--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -1269,28 +1269,45 @@ index_img: /img/1920x1080 (37).jpg
       * 实现加减乘除等算术运算、与或非等逻辑运算
       * 注意：ALU可以支持“直送”，即不对输入数据做任何处理
       * 控制信号：n bit，取决于ALU支持多少种运算，n bit控制信号，对应2^n种运算
+      
     * ②加法器（Adder）
       * 结合第二章复习，相当于弱鸡版ALU，只能实现加法、减法
       * 控制信号：1bit
         * 0加1减，控制信号的值会影响CF标志位（CF=sub⊕最高位进位）
+      
     * ③乘法器
+      
       * 实现乘法运算
+      
     * ④除法器
+      
       * 实现除法运算
+      
     * ⑤三态门
       * 就是一道门，可开可关
       * 控制信号：1bit，用于控制开/关
+    
     * ⑥多路选择器（MUX）
-      * 有2^n路输入，通过n bit控制信号选择让其中的某一路输入通过
+    * 有2^n路输入，通过n bit控制信号选择让其中的某一路输入通过
       * 控制信号：n bit，取决于有多少路输入，n bit控制信号，对应2^n路
+    
     * ⑦译码器（Decoder）
       * 根据n bit控制信号选择将2^n条输出线路中的某一条信号选通为1
       * 控制信号：n bit。由译码器的n bit输入即可决定选通哪根线
-
+      
+    * **多路选择器是一种能够从多个输入信号中选择一个输出的信号转换设备。译码器是一种将二进制编码转换为一组特定输出信号的设备。在寄存器堆中，译码器常常用于地址译码，从而控制对特定寄存器的访问。**
+  
+      ![](/img/91810.jpg)
+  
+      * **执行寄存器写相关指令时（将结果保存在寄存器中），指令中的寄存器编号被送到一个地址译码器进行译码，选中某个寄存器进行写入，读出时（从寄存器中获得计算数据）寄存器编号作为一个控制信号来控制一个多路选择器，选择相应的寄存器读出。**
+      * 读口（组合逻辑操作）：无需时钟控制，busA和busB分别由RA和RB给出地址。地址RA或RB有效后，经一个“取数时间（AccessTime）”，busA和busB有效
+      * 写口（时序逻辑操作）：需要时钟控制。写使能为1的情况下，时钟边沿到来时，busW传来的值开始被写入RW指定的寄存器中。
+        * 写是需要改变寄存器的值的，需要等到数据的信号稳定后写入，防止出错。而读只需要和寄存器里的值相等就行
+  
   * 存储元件（时序逻辑元件）
-
+  
     * 程序员可见的寄存器就是程序员想改什么值就改什么值的寄存器
-
+  
       * PC（转移类指令），普通寄存器
     * MAR、MDR、IR、暂存寄存器对程序员不可见
       
