--- a/source/_posts/计网大题强化.md
+++ b/source/_posts/计网大题强化.md
@@ -1038,6 +1038,13 @@ index_img: /img/1920x1080 (41).jpg
 
 ![](/img/gr4g.png)
 
+* 电路交换：
+  * 一旦专用电路建立，路径上的任何障碍都会导致整个连接中断
+* 数据报分组交换
+  * 每个分组独立路由，某个后继路由器故障后，发往该路由器的分组将失败，除非路由协议（如OSPF，RIP）能够检测到故障并找到一条不经过该路由器的新路径到达目的服务器，否则后续分组将无法到达
+* 报文交换
+  * 如果报文已经完整到达某路由器，但是下一跳路由器故障，某路由器无法将报文转发出去。该报文可能会在某路由器的存储中因超时而丢弃，或者如果系统有动态路由能力且存在备用路径，可能会尝试重路由（但这超出了基本报文交换的范畴，更接近高级网络功能）。基本情况下可以认为报文受阻于某路由
+
 ## 王道基础课网络层内容
 
 ### 网络层的功能
@@ -1108,6 +1115,7 @@ index_img: /img/1920x1080 (41).jpg
 
 * 以太网MAC帧的46-1500就是IP数据报的大小
 * **一个链路层数据帧能承载的最大数据量称为最大传送单元（MTU）**，以太网的MTU=**1500B**
+  * MTU是设置在路由器上的参数，默认和网络MTU大小一致，也可以自行设置
 * 每个分片又是独立的IP数据报
 
 ### IP地址
@@ -1412,6 +1420,7 @@ index_img: /img/1920x1080 (41).jpg
 
 * 因为G3和铁柱网吧属于同一个子网，所以应该从铁柱网吧子网所对应的IP地址块当中分配一个地址给G3
 * **匹配子网前缀更长的优先转发**
+  * 路由器在查找路由表时使用最长前缀匹配原则来确定最佳路由。交换机在查找MAC地址表时，是进行**精准匹配**，级查找与帧目的MAC地址完全相同的表项。如果找不到，则泛洪（对未知单播）。没有“最长匹配”的概念用于交换机的MAC地址表查找。
 
 #### 大题分析
 
